--- a/story1/page5/style.css
+++ b/story1/page5/style.css
@@ -1,6 +1,17 @@
 body {
-    background: url("01.png") no-repeat;
-    background-size: cover;
+    background: url("005.png") no-repeat;
+    /* Image is centered vertically and horizontally at all times */
+  background-position: center center;
+  
+  /* Image doesn't repeat */
+  background-repeat: no-repeat;
+  
+  /* Makes the image fixed in the viewport so that it doesn't move when 
+     the content height is greater than the image height */
+  background-attachment: fixed;
+  
+  /* This is what makes the background image rescale based on its container's size */
+  background-size: cover;
 }
 header h1{
     text-align: center;
@@ -13,16 +24,17 @@ main{
 }
 
 main section{
-    border:5px red solid;
+    border:5px solid yellow;
     height: 300px;
     width: 80%;
     margin: 0 auto;
-    background-color: white;
+    background-color: black;
     opacity: 0.7;
     border-radius: 10px;
 }
 
 main section .section-content p{
+    color: white;
     padding: 10px;
     font-size: 32px;
 }
@@ -37,8 +49,8 @@ main section .content-link a{
     height: 50px;
     width: 100px;
     border-radius: 10px;
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
     text-decoration: none;
     margin: 0 10px;
     opacity: 1;
@@ -48,6 +60,6 @@ main section .content-link a{
 }
 
 main section .content-link a:hover{
-    background-color: wheat;
-    color: black;
+    background-color: blue;
+    color: yellow;
 }
