--- a/story1/page7/style.css
+++ b/story1/page7/style.css
@@ -1,6 +1,17 @@
 body {
-    background: url("01.png") no-repeat;
-    background-size: cover;
+    background: url("007.png") no-repeat;
+   /* Image is centered vertically and horizontally at all times */
+  background-position: center center;
+  
+  /* Image doesn't repeat */
+  background-repeat: no-repeat;
+  
+  /* Makes the image fixed in the viewport so that it doesn't move when 
+     the content height is greater than the image height */
+  background-attachment: fixed;
+  
+  /* This is what makes the background image rescale based on its container's size */
+  background-size: cover;
 }
 header h1{
     text-align: center;
